argocd/hiae/prd/manifests/apps/np-api-sadia-orquestrador/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "19"
  creationTimestamp: "2026-06-30T18:07:49Z"
  generation: 19
  labels:
    app: np-api-sadia-orquestrador-apps
  name: np-api-sadia-orquestrador-apps
  namespace: apps-np-api
  resourceVersion: "432876115"
  uid: 05224517-0e2a-41e8-8211-e491db17613d
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: np-api-sadia-orquestrador-apps
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: np-api-sadia-orquestrador-apps
    spec:
      containers:
      - image: docker.io/devopsfaith/krakend:2.5
        imagePullPolicy: IfNotPresent
        name: np-api-sadia-orquestrador-gw
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/krakend/krakend.json
          name: np-api-sadia-orquestrador
          readOnly: true
          subPath: krakend.json
      - env:
        - name: PORT
          value: "3000"
        - name: JWKS_URI
          value: https://auth.hml.hoobox.one/realms/hoobox/protocol/openid-connect/certs
        - name: APP_VSN
          value: "584082"
        - name: DB_CA_CERT_PATH
          value: /etc/configmap/ca-certificate.pem
        envFrom:
        - secretRef:
            name: np-api-sadia-orquestrador
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-db
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-rmq
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-objectstorage
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-newrelic
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-client-credentials
            optional: true
        - secretRef:
            name: np-api-sadia-orquestrador-apps
            optional: true
        image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/np-api-sadia-orquestrador:584082
        imagePullPolicy: IfNotPresent
        name: np-api-sadia-orquestrador-app
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/configmap
          name: np-api-sadia-orquestrador
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: np-api-sadia-orquestrador
        name: np-api-sadia-orquestrador
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-30T18:07:49Z"
    lastUpdateTime: "2026-07-22T17:06:30Z"
    message: ReplicaSet "np-api-sadia-orquestrador-apps-f7f47b958" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-07-22T19:34:49Z"
    lastUpdateTime: "2026-07-22T19:34:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 19
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
